2단계 - 리팩터링(메뉴) (#218)
* feat: product VO common 패키지로 이동

* feat: 메뉴그룹 리팩터링

* feat(complie error): 메뉴상품 테스트 작성

* feat: 메뉴 리팩터링

* refactor: 패키지 변경

* refactor: 테스트 클래스 이름 변경

* refactor: 피드백 반영

* refactor: 피드백 반영

* refactor: 피드백 반영

* refactor: 이름변경

* feat: 피드백 반영

* feat: 피드백 반영 #1

* feat: 피드백 반영 #2

---------

Co-authored-by: jdragon <jdragon@i-screamedu.co.kr>